Fri Oct  8 13:42:03 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/CUTS/interpreters/UNITE/UNITE_Impl.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/UdmApp.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE.mpc:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_CoWorkEr_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_Execution_Visitor_T.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_Generators_T.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_Generators_T.inl:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/capi/CAPI_Generators.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/Component_Implementation.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/lang/cpp/Behavior_Generator.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/lang/cpp/Behavior_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/lang/java/Java_Behavior_Generator.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/lang/java/Java_Behavior_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/quotas/Pojo_Codegen/Pojo_Codegen.h:

          Updated to latest version of PICML/CoSMIC.

Thu Oct  7 19:36:54 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/PICML/interpreter/quotas/Spring_Deployment/Spring_Deployment_Visitor.cpp:

          Fixed build errors related to updating to latest version
          of CoSMIC.

Thu Oct  7 16:59:02 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/PICML/interpreter/quotas/integrator/Quotas_Integrator_Impl.cpp:

          Fixed build errors related to updating to latest version
          of CoSMIC.

Thu Oct  7 16:25:12 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>
